--- a/design.css
+++ b/design.css
@@ -1,101 +1,3 @@
-/* body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-}
-
-.container {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-}
-
-.tree {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 45%;
-}
-
-.depository {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 45%;
-}
-
-.tree .image img {
-  height: 650px;
-  width: 500px;
-}
-
-.tree img {
-  height: 180px;
-  width: 150px;
-}
-
-.depository img {
-  width: 700px;
-  height: 800px;
-  top: 20px;
-  right: 20px;
-  display: block;
-}
-
-.ornaments {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-
-.ornaments img {
-  height: 180px;
-  width: 150px;
-  cursor: grab;
-  transition: transform 0.3s ease;
-}
-
-.buttons {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.buttons button {
-  color: #972d2d;
-  background-color: #628148;
-  padding: 10px 20px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.textarea-wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-textarea {
-  width: 200px;
-  height: 100px;
-  resize: none;
-  background-color: transparent;
-  color: rgb(234, 214, 214);
-} */
-
 body {
   display: flex;
   justify-content: center;
@@ -138,8 +40,8 @@ body {
 }
 
 .tree img {
-  height: 18vh;
-  width: 9vw;
+  height: 17vh;
+  width: 8vw;
 }
 
 .depository img {
@@ -148,6 +50,18 @@ body {
   top: 2vh;
   right: 2vw;
   display: block;
+}
+
+.explain {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 20%;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2vw;
+  text-align: center;
+  color: rgb(234, 214, 214);
 }
 
 .ornaments {
@@ -161,8 +75,8 @@ body {
 }
 
 .ornaments img {
-  height: 18vh;
-  width: 9vw;
+  height: 17vh;
+  width: 8vw;
   cursor: grab;
   transition: transform 0.3s ease;
 }
@@ -180,8 +94,9 @@ body {
   color: #972d2d;
   background-color: #628148;
   padding: 1vh 2vw;
-  font-size: 1.5vh;
+  font-size: 1.7vh;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .textarea-wrapper {
@@ -212,8 +127,9 @@ textarea {
   color: #972d2d;
   background-color: #628148;
   padding: 1vh 2vw;
-  font-size: 1.5vh;
+  font-size: 1.7vh;
   font-weight: bold;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
@@ -233,13 +149,13 @@ textarea {
   }
 
   .tree img {
-    height: 15vh;
-    width: 10vw;
+    height: 9vh;
+    width: 11vw;
   }
 
   .ornaments img {
-    height: 15vh;
-    width: 10vw;
+    height: 9vh;
+    width: 11vw;
     cursor: grab;
     transition: transform 0.3s ease;
   }
@@ -252,5 +168,17 @@ textarea {
 
   textarea {
     font-size: 1rem;
+  }
+
+  .buttons button {
+    font-size: 1.5vh;
+  }
+
+  .depository .captureButton {
+    font-size: 1.5vh;
+  }
+
+  .explain {
+    font-size: 1.5vh;
   }
 }
