--- a/game.css
+++ b/game.css
@@ -1,60 +1,10 @@
-/* .time {
-  text-align: right;
-  font-size: 40px;
-  font-weight: bold;
-}
-
-.container {
-  height: 700px;
-  width: 800px;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  gap: 40px;
-  margin: auto;
-}
-
-.row {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 60px;
-}
-
-.col {
-  border: 1px solid #eae2bd;
-  display: block;
-}
-
-.cardBack {
-  display: none;
-}
-
-img {
-  height: 220px;
-  width: 160px;
-  background-color: #749a55;
-} */
-
 .time {
-  /* position: absolute;
-  top: 0;
-  right: 0; */
   max-height: 40px;
   text-align: right;
-  /* font-size: 10px; */
+  font-size: 3.5vw;
   font-weight: bold;
   margin: 10px;
 }
-
-/* body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-  box-sizing: border-box;
-} */
 
 .container {
   width: 50vw;
@@ -62,44 +12,32 @@ img {
   max-width: 800px;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  gap: 40vw;
-  /* aspect-ratio: 8 / 7; */
+  gap: 1vw;
   align-items: center;
   margin: auto;
-  position: relative;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 0 5vw;
 }
 
 .row {
-  /* width: 50vw;
-  height: 20vh; */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20vw;
-  /* padding: 10vw; */
+  gap: 1vw;
 }
 
 .col {
   width: 85%;
   height: 100%;
-  /* width: 15vw;
-  height: 15vh; */
   border: 1px solid #eae2bd;
-  /* display: block; */
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   aspect-ratio: 4 / 5;
-  /* gap: 10vw; */
 }
-
-/* .cardFront img,
-.cardBack img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
 
 .cardFront {
   position: absolute;
@@ -125,19 +63,9 @@ img {
   object-fit: fill;
 }
 
-@media screen {
+@media screen and (max-width: 768px) {
   .container {
-    grid-template-rows: repeat(3, 1fr);
-    gap: 1vw;
     width: 80%;
-  }
-
-  .row {
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1vw;
-  }
-
-  .time {
-    font-size: 3.5vw;
+    top: 50%;
   }
 }
